<resources>
    <string name="app_name">ControLab</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="profesor">PROFESOR:</string>
    <string name="materia">MATERIA:</string>
    <string name="nomprac">NOMBRE DE PRACTICA:</string>
    <string name="alum">ALUMNOS ATENDIOS:</string>
    <string name="fecha">FECHA:</string>
    <string name="mantenimiento">MANTENIMIENTO:</string>
    <string name="selec">SELECCIONA EL USUARIO\n A MODIFICAR:</string>
    <string name="nombre">NUEVO NOMBRE:</string>
    <string name="pass">NUEVA CONTRASEÑA:</string>
    <string name="cpass">REPITE CONTRASEÑA:</string>
    <string name="inpro">NOMBRE DEL PROFESOR:</string>
    <string name="inmat">NOMBRE DE LA MATERIA:</string>
    <string name="equipo">EQUIPO No:</string>
    <string name="salon">SALON</string>

    <string name="serie">SERIE CPU:</string>
    <string name="serie2">SERIE:</string>
    <string name="regulador">REGULADOR:</string>
    <string name="software">SOFTWARE</string>
    <string name="hardware">HARDWARE</string>
    <string name="teclado">TECLADO:</string>
    <string name="mouse">MOUSE:</string>
    <string name="monitor">MONITOR:</string>
    <string name="ram">RAM (GB):</string>
    <string name="dd">DD (GB):</string>
    <string name="procesador">PROCESADOR:</string>
    <string name="observaciones">OBSERVACIONES:</string>
    <string name="dev">DEV C++:</string>
    <string name="net">NETBEANS:</string>
    <string name="eclip">ECLIPSE:</string>
    <string name="note">NOTEPAD ++:</string>
    <string name="ged">gEDIT:</string>
    <string name="dia">DIA:</string>
    <string name="post">POSTGRE SQL:</string>
    <string name="cisco">CISCO PACKET:</string>
    <string name="virtual">VIRTUAL BOX:</string>
    <string name="unity">UNITY:</string>
    <string name="internet">INTERNET:</string>
    <string name="visual">VISUAL STUDIO:</string>
    <string name="choose">ESCOJE EL SALÓN \nDONDE ESTA EL EQUIPO</string>

</resources>
