<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/tvP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profesor"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/negro"/>

    <Spinner
        android:id="@+id/spprofe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="104dp"
        android:layout_marginBottom="488dp" />

    <TextView
        android:id="@+id/tvM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materia"
        android:layout_below="@+id/tvP"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/negro"/>

    <Spinner
        android:id="@+id/spmate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginBottom="449dp"
        android:layout_toEndOf="@+id/tvM" />

    <TextView
        android:id="@+id/tvN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomprac"
        android:layout_below="@+id/tvM"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/negro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNom"
        android:hint="  Nombre Practica"
        android:layout_below="@+id/tvM"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="215dp"
        android:layout_marginTop="12dp"
        android:inputType="text"/>

    <TextView
        android:id="@+id/tvA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alum"
        android:layout_below="@+id/tvN"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/negro"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etA"
        android:hint="          Cantidad"
        android:layout_below="@+id/tvN"
        android:layout_marginRight="1dp"
        android:layout_marginLeft="198dp"
        android:layout_marginTop="12dp"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/tvF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:layout_below="@+id/tvA"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/negro"/>

    <CalendarView
        android:id="@+id/CV"
        android:layout_width="317dp"
        android:layout_height="301dp"
        android:layout_below="@+id/etA"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="0dp" />

    <Button
        android:id="@+id/bRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@color/bienvenido"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="Registrar"
        android:textColor="@color/plata"
        android:textSize="20dp" />

</RelativeLayout>